[package]
name = "hydra"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.102"
egui = "0.35"
eframe = "0.35"
egui_dock = "0.20"
egui_extras = "0.35"
poll-promise = { version = "0.3", features = ["tokio"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "sync", "net", "macros", "io-std", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0.2"
strum = { version = "0.28", features = ["derive"] }
chrono = "0.4.45"